syntax = "proto3";
option java_multiple_files = true;

/**
package: define a namespace for protocol buffer definitions
 */
package org.user;

service UserService {
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string userName = 1;
  string role = 2;
  string password = 3;
}

message CreateUserResponse {
  string userName = 1;
  string role = 2;
}

message LoginUserRequest {
  string userName = 1;
  string password = 2;
}

message LoginUserResponse {
  string userName = 1;
  string role = 2;
  string password = 3;
}